--- a/Onliner for windows 10/Onliner for windows 10/Views/NewsSectionPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/NewsSectionPage.xaml
@@ -7,15 +7,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
-    xmlns:Model="using:Onliner_for_windows_10.Model"
     xmlns:UserControls="using:Onliner_for_windows_10.UserControls"
     xmlns:viewModel="using:Onliner_for_windows_10.Views"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:converter="using:Onliner.Converters"
     xmlns:controls="using:Template10.Controls"
-    mc:Ignorable="d"
-    >
+    mc:Ignorable="d">
     <Page.Resources>
         <converter:SelectionChangedConverter x:Key="SelectionChangedConverter" />
         <converter:ImageUrlConverters x:Key="ImageUrlConverter" />
@@ -24,15 +22,13 @@
         <Style x:Key="GridViewItemStyle" TargetType="GridViewItem">
             <Setter Property="Margin" Value="3,3,0,0"/>
         </Style>
-
     </Page.Resources>
-
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        
         <controls:PageHeader x:Name="pageHeader" 
                              Text="Новости"
                              FontWeight="Bold"
@@ -44,17 +40,26 @@
                              RelativePanel.AlignLeftWithPanel="True"
                              RelativePanel.AlignRightWithPanel="True"
                              RelativePanel.AlignTopWithPanel="True">
-           
+
             <controls:PageHeader.PrimaryCommands>
-                <AppBarButton Icon="Favorite" Label="favorite" Command="{Binding FavoritePageCommand}" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+             <!--   <AppBarButton Icon="Favorite" Label="Сохраненные" Command="{Binding FavoritePageCommand}" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>-->
+                <AppBarButton Icon="Refresh" Label="Обновить" Command="{Binding UpdateNewsSectionCommand}" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+
             </controls:PageHeader.PrimaryCommands>
         </controls:PageHeader>
-        
-        <Grid Background="{ThemeResource BackGroundCustomNewsHeaderColorBrush}" Grid.Row="1"
+
+        <Grid Grid.Row="1"
+              Background="{ThemeResource BackGroundCustomNewsHeaderColorBrush}"
               RelativePanel.AlignBottomWithPanel="True"
-                      RelativePanel.AlignLeftWithPanel="True"
-                      RelativePanel.AlignRightWithPanel="True"
-                      RelativePanel.Below="pageHeader">
+              RelativePanel.AlignLeftWithPanel="True"
+              RelativePanel.AlignRightWithPanel="True"
+              RelativePanel.Below="pageHeader">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <!--#region Visual State Manager-->
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="VisualStateGroup">
                     <VisualState x:Name="VisualStateMobile">
@@ -83,10 +88,10 @@
                     </VisualState>
                 </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
+            <!--#endregion-->       
+
+            <!--#region Tab Header-->
+            <Rectangle Height="1" VerticalAlignment="Bottom" Fill="LightGray" Grid.Row="0"/>
             <ListView x:Name="TabListview" 
                       Background="{ThemeResource BackGroundCustomHeaderChildColorBrush}"
                       ItemContainerStyle="{ThemeResource HeaderTabListViewItemContainerStyle}" 
@@ -118,16 +123,16 @@
                     <UserControls:TabHeader Glyph="&#xE825;" Label="Недвижимость"
                                      FontSize="20"  Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
                 </ListViewItem>
-                <ListViewItem>
-                    <UserControls:TabHeader Glyph="&#xE2AF;" Label="Мнения"
-                                     FontSize="20"  Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                </ListViewItem>
             </ListView>
-            <Rectangle Height="1" VerticalAlignment="Bottom" Fill="LightGray" Grid.Row="0"/>
             <ProgressBar Foreground="Blue" Grid.Row="0" Grid.ColumnSpan="5" Background="Transparent" IsIndeterminate="{Binding ProgressRing}" VerticalAlignment="Top"/>
-            <!--Flipview for static pivot-->
-            <Pivot x:Name="FlipNews" SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
-                   Background="{ThemeResource BackGroundCustomColorBrush}" Grid.Row="1">
+            <!--#endregion-->
+            
+            <!--#region Pivot Control-->
+            <Pivot x:Name="FlipNews"
+                    Grid.Row="1"
+                   SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
+                   Background="{ThemeResource BackGroundCustomNewsColorBrush}">
+                <!-- Tech section -->
                 <PivotItem Margin="0,-48,0,0">
                     <GridView x:Name="TechGridView"
                     ItemsSource="{Binding TechNewsList}"
@@ -154,6 +159,7 @@
                         </GridView.ItemContainerTransitions>
                     </GridView>
                 </PivotItem>
+                <!-- People section -->
                 <PivotItem Margin="0,-48,0,0">
                     <GridView x:Name="PeopleGridView" 
                           ItemsSource="{Binding PeopleNewsList}"
@@ -177,6 +183,7 @@
                         </GridView.ItemContainerTransitions>
                     </GridView>
                 </PivotItem>
+                <!-- Auto section -->
                 <PivotItem  Margin="0,-48,0,0">
                     <GridView x:Name="AutoGridView" 
                               ItemsSource="{Binding AutoNewsList}" 
@@ -200,6 +207,7 @@
                         </GridView.ItemContainerTransitions>
                     </GridView>
                 </PivotItem>
+                <!-- House section -->
                 <PivotItem  Margin="0,-48,0,0">
                     <GridView x:Name="HouseGridView"  
                               ItemsSource="{Binding HouseNewsList}" 
@@ -223,32 +231,9 @@
                         </GridView.ItemContainerTransitions>
                     </GridView>
                 </PivotItem>
-                <PivotItem Margin="0,-48,0,0">
-                    <GridView x:Name="SpeakGridView" 
-                              ItemsSource="{Binding OpinionsNewsList}"
-                              ItemTemplate="{ThemeResource OpinionsList}" 
-                              ItemContainerStyle="{StaticResource GridViewItemStyle}"
-                              SizeChanged="myGridView_SizeChanged">
-                        <interactivity:Interaction.Behaviors>
-                            <core:EventTriggerBehavior  EventName="SelectionChanged">
-                                <core:InvokeCommandAction Command="{Binding Path=ItemClickCommand}"
-                                                      InputConverter="{StaticResource SelectionChangedConverter}"
-                                                      InputConverterParameter="{Binding ElementName=SpeakGridView}"/>
-                            </core:EventTriggerBehavior>
-                        </interactivity:Interaction.Behaviors>
-                        <GridView.ItemContainerTransitions>
-                            <TransitionCollection>
-                                <EntranceThemeTransition IsStaggeringEnabled="True" 
-								FromVerticalOffset="300" 
-								FromHorizontalOffset="0"/>
-                                <AddDeleteThemeTransition/>
-                                <NavigationThemeTransition/>
-                                <ContentThemeTransition/>
-                            </TransitionCollection>
-                        </GridView.ItemContainerTransitions>
-                    </GridView>
-                </PivotItem>
             </Pivot>
+            <!--#endregion-->
+            
         </Grid>
     </Grid>
 </Page>
